--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8" />a
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>GAMMO — Portal</title>
   <meta name="description" content="Enter GAMMO: neon cosmos, bold links, zero gravity." />
