--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Enter GAMMO: neon cosmos, bold links, zero gravity." />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    :root{a
+    :root{
       --bg:#000;
       --ink:#d9ffe5;
       --muted:#7de39e;
